MTM-43020 use docker client withPlatform to specify target platform, Code Cleanup and simplifications